api/templates/default/etemplate2.css
/* ... */
.et2_toolbar details.et2_toolbar_more.admin .ui-toolbar-menulistHeader.list_header-short {
    background-position: left;
}
.et2_toolbar .et2_toolbar_more summary .toolbar-admin-pref {
    background-image: url(../../../pixelegg/images/setup.svg);
    background-repeat: no-repeat;
    background-size: 12px;
    width: 20px;
    height: 100%;
    display: inline-block;
    background-position: center;
    float: right;
}

.et2_toolbar .et2_toolbar_more summary .toolbar-admin-pref:hover {
    background-color: #ffd555;
}

.et2_toolbar .et2_toolbar_more .ui-toolbar-menulistHeader {
    border: 1px solid silver;
    border-radius: 3px;
    background-color: #fafafa;
    font-family: Verdana, "Lucida Grande", Helvetica, Sans-Serif;
    font-size: 9pt;
    font-weight: normal;
    height: 17px;
    margin-top: 1px;
    padding-left: 5px;
    padding-right: 5px;
    align-items: end;
    padding-top: 5px;
}

.et2_toolbar details[open].et2_toolbar_more .ui-toolbar-menulistHeader.list_header-short {
    background-image: url(../../../pixelegg/images/arrow_down.svg);
    background-size: 12px;
    background-position: center;
    background-repeat: no-repeat;
}
.et2_toolbar details[open].et2_toolbar_more.admin .ui-toolbar-menulistHeader.list_header-short {
    background-position: left;
}
.et2_toolbar .et2_toolbar_actionlist span[data-group]:not(:first-child) > button.et2_button:first-child {
    margin-left: 7px;
}

.et2_toolbar .et2_toolbar_actionlist button.et2_button_with_image, .nextmatch_header_row .et2_button {
    width: 24px;
    height: 24px;
    background-position: center;
    background-size: 16px 16px;
    padding-left: 0;
    background-color: #fafafa;
}
.nextmatch_header_row et2-button, .nextmatch_header_row et2-searchbox, .et2_toolbar et2-button {
    margin-right: 1ex;
}
.nextmatch_header_row et2-button::part(container){
    height: 18px;
}
.nextmatch_header_row et2-button img {
    width: 16px;
}
et2-button.transparent-button {
    border: none;
    background: transparent;
}
et2-button.transparent-button::part(container) {
    width: auto;
    height: auto;
    background: none;
}
.et2_toolbar .et2_toolbar_actionlist button.et2_button_with_image.et2_toolbar_hasCaption, .nextmatch_header_row .et2_button_text {
    width: auto;
    background-position: 6px center;
    padding-left: 26px;
    padding-right: 5px;
    color: #5B5B5B;
    z-index: 1000;
}

.et2_toolbar .et2_toolbar_actionlist button.et2_button_with_image.et2_toolbar_onlyCaption {
    vertical-align: top;
    width: auto;
    padding-left: 3px;
    background-image: none;
}

.nextmatch_header_row button,
.et2_toolbar div.et2_progress,
.nextmatch_header_row div.et2_progress {
    margin: 1px 4px 1px 0;
    height: 24px;
    border-radius: 3px;
    background-color: #fafafa;
    border: 1px solid silver;
}

.et2_toolbar div.et2_progress, .nextmatch_header_row div.et2_progress {
    padding: 0;
    height: 22px;
}

.et2_toolbar .et2_progress > div, .nextmatch_header_row .et2_progress > div {
    margin: 2px;
    border-radius: 3px;
    height: 18px;
}

.et2_toolbar div.chzn-container-multi, .nextmatch_header_row div.chzn-container-multi {
    margin-right: 4px;
}

.et2_toolbar .chzn-container-multi ul.chzn-choices, .nextmatch_header_row .chzn-container-multi ul.chzn-choices {
    border-radius: 3px;
    border: 1px solid silver;
}

.et2_toolbar .chzn-container-multi li.search-choice, .nextmatch_header_row .chzn-container-multi li.search-choice {
    margin: 1px;
}

.et2_toolbar .chzn-container-multi li.search-field input, .nextmatch_header_row .chzn-container-multi li.search-field input {
    padding: 3px;
}

/**
 * Fileupload in toolbar or NM header
 */
.et2_toolbar div.et2_file, .nextmatch_header_row div.et2_file {
    width: 145px;
    margin-top: 1px;
    padding-right: 4px;
}

.et2_toolbar div.et2_file span, .nextmatch_header_row div.et2_file span,
.et2_toolbar div.et2_file input, .nextmatch_header_row div.et2_file input {
    height: 16px;
    top: 0;
    margin: 0;
    border-radius: 3px;
    background-color: #fafafa;
    border: 1px solid silver;
    text-indent: 0;
    background-position: center;
}

/**
 * Textbox in toolbar or NM header
 */
.et2_toolbar input.et2_textbox, .nextmatch_header_row input.et2_textbox {
    height: 18px;
    margin: 1px 4px 1px 0;
    border-radius: 3px;
    background-color: #fafafa;
    border: 1px solid silver;
    padding: 2px 5px 2px 2px;
}

/**
 * Daterange selection in NM header
 */
.nextmatch_header_row span.et2_date[name$=date] {
    min-width: 14ex;
    padding: 0;
}

.nextmatch_header_row span.et2_date[name$=date] > input.et2_date {
    margin: 1px 4px 1px 0;
    height: 22px;
    min-width: 14ex;
    padding: 0;
    background-color: #fafafa;
    border: 1px solid silver;
    border-radius: 3px;
    padding-left: 5px;
}

.nextmatch_header_row > div {
    float: left;
}

.nextmatch_header_row:after {
    clear: both;
    display: block;
    content: "";
}

.et2_toolbar select, .nextmatch_header_row select {
    height: 24px;
    margin: 1px 4px 1px 0;
    background-color: #fafafa;
    border: 1px solid silver;
    border-radius: 3px;
    padding-left: 5px;
}

.et2_toolbar button.toolbar_toggled, .et2_searchbox button.et2_button.toolbar_toggled {
    background-color: lightgray;
    box-shadow: inset 1px 1px 1px 1px gray !important;
}

.et2_toolbar_more .et2_toolbar-dropdown {
    max-width: initial;
    width: 100%;
}

.et2_toolbar-dropdown {
    display: inline-block;
    direction: ltr;
    height: 24px;
    top: -2px;
    text-align: left;
    font-weight: normal !important;
    font-size: 9pt !important;
    vertical-align: bottom !important;
}


.et2_toolbar-dropdown img {
    padding-left: 7px;
    background-repeat: no-repeat;
    background-position: 5% center;
    background-size: 16px;
}
/* ... */

