fix size and alignment of image only button padding-left: 1px also looks nicer for buttons with image+label

--- a/api/templates/default/etemplate2.css
+++ b/api/templates/default/etemplate2.css
@@ -2879,6 +2879,7 @@ div.et2_toolbar.ui-widget-header {
 }
 .nextmatch_header_row et2-button, .nextmatch_header_row et2-searchbox, .et2_toolbar et2-button {
     margin-right: 1ex;
+    min-width: 24px;
 }
 .nextmatch_header_row et2-button::part(container){
     height: 18px;
